attempted to fix pre_existing, null pointer exception in application controller class